# webserv

./: .clang-format  .clangd  .format_all.sh  .generate_compile_commands.sh  .gitignore  CMakeLists.txt  Doxyfile  GIT_WORKFLOW.md  Makefile  README.md  TESTING.md  TESTING_QUICK_REFERENCE.md  TODO_WEBserv.md  analisis_proyecto.md  compile_commands.json  docker-compose.yaml  generate_compile_commands.sh  host_test.conf  launch_tester.sh  post.sh  reproduce_cgi.conf  reproduce_cgi_issue.py  stress_test.py  verify.py
config/: CGI_TESTING_GUIDE.md  TODO.txt  default-test.conf  default.conf  default.conf.bak  default.conf.tester  file.conf  file_backup.conf  head_test.conf  nginx.conf  nginx_test_cgi.conf  test_cgi.conf  test_multi_server.conf  tester.conf
config/examples/: default.conf  nginx.conf
config/test-cases-cgi/: cgi_multi_test.conf  tester.conf
config/test-cases-error/: invalid_cgi.conf  invalid_nested_location.conf  invalid_syntax.conf
config/test-cases-valid/: test_multi_server.conf  valid_basic.conf  valid_cgi.conf  valid_multi_server.conf
configs/: default.conf
docs/: APUNTES_ALLOW_METHODS_AUTOINDEX.md  APUNTES_CONFIG.md  APUNTES_EPOLL_CGI.md  APUNTES_HTTP_PROCESSOR_CLIENT.md  DIAGRAMA_SIMPLE.md  GUIA_FLUJO.md  HTTP_APUNTES.md  NGINX_TEST.md  implementation_plan.md
docs/allowed_functions/: README.md  TestServer.cpp  directory-opeations.cpp  directory-operations.md  file-operations.cpp  file-operations.md
src/: main.cpp
src/cgi/: CMakeLists.txt  CgiExecutor.cpp  CgiExecutor.hpp  CgiProcess.cpp  CgiProcess.hpp
src/client/: AutoindexRenderer.cpp  AutoindexRenderer.hpp  CMakeLists.txt  Client.cpp  Client.hpp  ClientCgi.cpp  ErrorUtils.cpp  ErrorUtils.hpp  README.md  RequestProcessor.cpp  RequestProcessor.hpp  RequestProcessorUtils.cpp  RequestProcessorUtils.hpp  ResponseUtils.cpp  ResponseUtils.hpp  SessionUtils.cpp  SessionUtils.hpp  StaticPathHandler.cpp  StaticPathHandler.hpp  TemplateUtils.cpp  TemplateUtils.hpp
src/client/docsclient/: APUNTES_COOKIES.md  Autoindex.md  CGI_Body_y_Tamano.md  CGI_Cliente_Plan.md  CGI_Variables_Entorno.md  CGI_flujo_simple.md  Chuleta_configuracion.md  Client_CGI_integracion.md  Crear_paginas_estaticas.md  Ejecutar_sin_config.md  Epoll_level_vs_edge.md  Flujo_CGI_fd.md  MAX_BODY_SIZE_EXPLICACION.md  MatchLocation_apuntes.md  Pendientes_client_http_process.md  Processor_CGI_integracion.md  QUÉ_PRUEBAN_LOS_TESTERS.md  Rama_integracion_cambios.md  RequestProcessor_apuntes.md  RequestProcessor_flujo.md  RequestProcessor_process_flow.md  ResponseUtils_y_ContentType.md  SCRIPTS_DE_TEST_PYTHON.md  StaticPathHandler_notas.md  Timeout_explicacion.md
src/common/: CMakeLists.txt  StringUtils.cpp  StringUtils.hpp  StringUtils.tpp  Types.hpp  namespaces.hpp
src/config/: CMakeLists.txt  ConfigException.cpp  ConfigException.hpp  ConfigParser.cpp  ConfigParser.hpp  ConfigUtils.cpp  ConfigUtils.hpp  LocationConfig.cpp  LocationConfig.hpp  ServerConfig.cpp  ServerConfig.hpp  cmake_architecture_guide.md  mainConfig.cpp
src/config/info/: ConfigUtils_uml.md  PARSING_GUIDE.md  cases-test-file  compliance_report_config.md  config_review.md  config_uml.md  directive-return.md  estado_parser_config.md  flow-of-parsing  flow-parsing.md  impl_plan.md  implementation_plan.md  pending_features.md  refactoring_ideas.md  resources.txt  revision_parser_config.md  teoria-type-of-stringstream.md  testing_recommendations.md
src/http/: CMakeLists.txt  HttpHeaderUtils.cpp  HttpHeaderUtils.hpp  HttpParser.cpp  HttpParser.hpp  HttpParserBody.cpp  HttpParserHeaders.cpp  HttpParserStartLine.cpp  HttpRequest.cpp  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.hpp  README.md  architecture.md  body.md  headers.md  parsing-flow.md  start-line.md
src/network/: CMakeLists.txt  EpollWrapper.cpp  EpollWrapper.hpp  ServerManager.cpp  ServerManager.hpp  TcpListener.cpp  TcpListener.hpp
src/utils/: CMakeLists.txt  StringUtils.cpp  StringUtils.hpp  StringUtils.tpp
tests/: CMakeLists.txt  README.md  aaa_testing_theory.md  check_fcntl.cpp  implementation_plan.md  implementation_plan1.md  manual_http_parser  manual_http_request  test_cgi_integration.py  test_cgi_unit.py  test_utils.hpp  verify_head.sh
tests/hosts/: host_tests.md
tests/manual_client/: CMakeLists.txt  manual_client.cpp
tests/manual_processor/: CMakeLists.txt  manual_request_processor.cpp
tests/scripts/: debug_cgi.py  debug_test.sh  final_test.sh  test_client_errors.sh  test_concurrent.py  test_server.sh  valgrind_checks.sh  verify.py  verify_cgi_crash.py  verify_host_binding.py
tests/test_cgi/: cgi_tests.sh  test_cgi_executor.cpp  test_cgi_integration.py  test_cgi_pages.conf  test_cgi_pipe.py
tests/test_cgi/scripts/: hello.py  timeout.py
tests/test_fd/: check_fcntl_1.cpp
tests/test_http/: CMakeLists.txt  manual_http_parser.cpp  manual_http_request.cpp
tests/test_network/: test_client.cpp
tests/unit/: CMakeLists.txt  main_test.cpp
tests/unit/config/: goog-practices-tdd.md  test_config_integration.cpp  test_config_parser.cpp  test_validations.cpp
www/: about.html  ana.html  carles.html  daru.html  index.html  tactical-scanner.html  target-list.html  upload.html
www/cgi-bin/: debug.py  echo_body.py  echo_env.py  form_handler.py  hello.py  hello.sh  info.cgi  list_images.py  no_length.py  redirect.py  register_squad.py  simple.sh  slow.py  status_500.py  test.py  test.sh
www/css/: laserweb.css  styles.css
www/docs/: diagram-flujo-servidor.html
www/error_pages/: 404.html  500.html
www/errors/: 400.html  403.html  404.html  500.html  501.html
www/head_test/: index.html  plain.txt
www/head_test/img/: photo.txt
www/images/team/: README.txt
www/post_body/: index.html
www/templates/: autoindex.html  error.html
www/test_dir/: README.txt
www/uploads/: placeholder.txt  uploaded.txt
